<resources>
    <string name="app_name">Quick Tip</string>

    <!--EN-->
    <!--TextViews-->
    <string name="instructionTV">Enter your bill:</string>
    <string name="rateTV">Rate the service</string>
    <string name="languageTV">Language</string>
    <string name="settings_menuTV">Settings Menu</string>
    <string name="tipInfoTV">% of your total bill</string>
    <string name="totalBillTV">Your total bill is:</string>
    <string name="resultTextTV">The right tip is:</string>
    <string name="excellentRateTV">Excellent</string>
    <string name="poorRateTV">Poor</string>
    <!--Other elements (Buttons, etc...)-->
    <string name="calculateButton">Calculate</string>
    <string name="saveButton">Save</string>
    <!--Switches-->
    <string name="service_bad">Poor</string>
    <string name="serviceOk">OK</string>
    <string name="serviceExc">Excellent</string>
    <string name="lang">EN</string>
    <!--Titles?-->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="theme_header">Theme</string>
    <string name="language_header">Language</string>

    <!-- Messages Preferences -->
    <string name="darkMode_title">Dark mode</string>
    <string name="language_title">Language</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
